--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,35 +1,43 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
-
+name: Continuous Integration
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+    branches:
+      - main
+      - jenk
+  workflow_dispatch:
+  
 jobs:
-  build:
-
+  my_first_job:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        distribution: 'zulu'
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Show Java version
+      run: "java -version"
+
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        ref: jenk
+
+    - name: Show directory
+      run: 'pwd'
+
+    - name: List files
+      run: 'ls -al'
+
+    - name: Install Dependencies
+      run: 'mvn compile'
+
+    - name: Build application
+      run: 'mvn package -DskipTests'
+
+    - name: Test application
+      run: 'mvn test'
+
